<resources>

    <string name="app_name">Fantasy</string>
    <string name="register_label">Sign up</string>
    <string name="edit_user_label">Edit account</string>
    <string name="league_code">Code:</string>
    <string name="edit_success">User\'s account has been edited successfully</string>

    //Hints
    <string name="email_hint" translatable="false">Email</string>
    <string name="password_hint">Password</string>
    <string name="password_repeat_hint">Repeat password</string>
    <string name="new_password_hint">New password</string>
    <string name="new_password_repeat_hint">Repeat new password</string>
    <string name="firstname_hint">First name</string>
    <string name="lastname_hint">Last name</string>
    <string name="league_code_hint">League code</string>
    <string name="league_name">League name</string>

    //Buttons
    <string name="login_button">Log in</string>
    <string name="create_account">Don\'t have account? <u>Sign up</u></string>
    <string name="logout_button">Log out</string>
    <string name="register_button">Sign up</string>
    <string name="change_password_button">Change password</string>
    <string name="save_edit_button">Save</string>
    <string name="transfer_button" translatable="false">Transfer</string>

    //Navigation
    <string name="tab_league">Leagues</string>
    <string name="tab_home">Home</string>
    <string name="tab_team">Team</string>

    //Content Descriptions
    <string name="logo_desc">Application logo</string>
    <string name="error_empty_email">Please enter email address</string>
    <string name="error_password_empty">Please enter password</string>

    //Errors
    <string name="connection_error">Couldn\'t retrieve data</string>
    <string name="password_error">Password is incorrect</string>
    <string name="user_exists_error">User doesn\'t exist</string>
    <string name="user_already_exists_error">User with provided email already exists</string>
    <string name="firstname_empty_error">Please enter first name</string>
    <string name="lastname_empty_error">Please enter last name</string>
    <string name="email_length_error">Email is too long</string>
    <string name="firstname_length_error">First name is too long</string>
    <string name="lastname_length_error">Last name is too long</string>
    <string name="teamName_empty_error">Team name is empty</string>
    <string name="teamName_length_error">Team name is too long</string>
    <string name="password_length_error">Password must contain at least 6 characters</string>
    <string name="passwords_do_not_match">Passwords do not match</string>
    <string name="create_league_error">Couldn\'t create league, try again later</string>
    <string name="join_league_error">League doesn\'t exist or code is incorrect</string>
    <string name="more_than_3_error">Your team has more than 3 players from </string>
    <string name="edit_error">Something went wrong, try again</string>

    //Dialogs
    <string name="user_successfully_created">User successfully created!</string>
    <string name="back_button_close_app_warning">Click one more time to close the app</string>
    <string name="join_league_dialog_title">JOIN LEAGUE</string>
    <string name="create_league_dialog_title">CREATE LEAGUE</string>
    <string name="edit_user_dialog">Enter your password to proceed</string>


    <string name="position">Pos:</string>
    <string name="create">Create</string>
    <string name="join">Join</string>
    <string name="cancel">Cancel</string>
    <string name="number_of_players">Players:</string>
    <string name="share_league_text_pt1">Your friend invited you to join Fantasy League:</string>
    <string name="share_league_text_pt2">, here\'s the code:</string>
    <string name="deadline">Team submit deadline</string>
    <string name="your_score">Your Score</string>
    <string name="average">Average</string>
    <string name="highest">Highest</string>
    <string name="gw_gameweek">GAMEWEEK</string>
    <string name="gw_points">points</string>
    <string name="gk">GK</string>
    <string name="def">DEF</string>
    <string name="mid">MID</string>
    <string name="atk">ATK</string>
    <string name="sort">Sort:</string>
    <string name="budget">BUDGET</string>
    <string name="team_name">Team name</string>

    //Sort
    <string-array name="sortA_types">
        <item>Name</item>
        <item>Team</item>
        <item>Position</item>
    </string-array>
    <string-array name="sortB_types">
        <item>Value</item>
        <item>Total points</item>
    </string-array>

</resources>
